<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="flightsModel"
            type="com.example.qlabtest.data.models.FlightsModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_price_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@{flightsModel.price}"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_price_label"
            app:layout_constraintTop_toTopOf="@+id/tv_price_label"
            app:layout_constraintVertical_bias="0.0"
            tools:text="300$" />

        <TextView
            android:id="@+id/tv_departures_from_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/departures_from"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_price_label"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_departures_from_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@{flightsModel.departuresFrom}"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_departures_from_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_departures_from_label"
            app:layout_constraintTop_toTopOf="@+id/tv_departures_from_label"
            tools:text="TLV" />

        <TextView
            android:id="@+id/tv_arrival_to_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/arrival_to"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_departures_from_label"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_arrival_to_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@{flightsModel.arrivalTo}"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_arrival_to_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_arrival_to_label"
            app:layout_constraintTop_toTopOf="@+id/tv_arrival_to_label"
            tools:text="LHR" />

        <TextView
            android:id="@+id/tv_departures_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/departures_time"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_arrival_to_label"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_departures_time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@{flightsModel.departuresTime}"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_departures_time_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_departures_time_label"
            app:layout_constraintTop_toTopOf="@+id/tv_departures_time_label"
            tools:text="10:00" />

        <TextView
            android:id="@+id/tv_arrival_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/arrival_time"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_departures_time_label"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_arrival_time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@{flightsModel.arrivalTime}"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_arrival_time_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_arrival_time_label"
            app:layout_constraintTop_toTopOf="@+id/tv_arrival_time_label"
            tools:text="11:00" />

        <TextView
            android:id="@+id/tv_departures_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/departures_date"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_arrival_time_label"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_departures_date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@{flightsModel.departuresDate}"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_departures_date_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_departures_date_label"
            app:layout_constraintTop_toTopOf="@+id/tv_departures_date_label"
            tools:text="21/04/2023" />

        <TextView
            android:id="@+id/tv_arrival_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/arrival_date"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_departures_date_label"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_arrival_date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@{flightsModel.arrivalDate}"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_arrival_date_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_arrival_date_label"
            app:layout_constraintTop_toTopOf="@+id/tv_arrival_date_label"
            tools:text="21/04/2023" />

        <TextView
            android:id="@+id/tv_is_direct_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/is_direct"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_arrival_date_label"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_is_direct_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@{flightsModel.isDirect}"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_is_direct_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_is_direct_label"
            app:layout_constraintTop_toTopOf="@+id/tv_is_direct_label"
            tools:text="true" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_is_direct_label" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>